test_suite/alan-2022-examples/passing/000210_deriv.alan
source PSz begin if 29 then while 9975 do relax end end end
