test_suite/alan-2022-examples/failing/002970_mutation.alan
source r begin if 2 do then relax end end
